# nitrocoro

./: .clang-format  .gitignore  CMakeLists.txt  CoroScheduler.cc  CoroScheduler.h  LICENSE  README.md  README_zh.md  TODO.md  Task.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  main.cc  tcp_test.cc
examples/: CMakeLists.txt  http_client.cc  http_server.cc  tcp_chat_server.cc  tcp_client.cc  tcp_echo_server.cc  websocket_server.cc
extensions/http/: CMakeLists.txt
extensions/http/include/nitrocoro/http/: BodyReader.h  BodyWriter.h  Form.h  HttpClient.h  HttpContext.h  HttpDataAccessor.h  HttpHandler.h  HttpHeader.h  HttpMessage.h  HttpMessageAccessor.h  HttpRouter.h  HttpServer.h  HttpTypes.h  StaticFiles.h
extensions/http/include/nitrocoro/http/stream/: HttpIncomingStream.h  HttpIncomingStreamBase.h  HttpOutgoingStream.h  HttpOutgoingStreamBase.h
extensions/http/src/: BodyReader.cc  BodyWriter.cc  Form.cc  HttpClient.cc  HttpContext.cc  HttpContext.h  HttpOutgoingStream.cc  HttpParser.cc  HttpParser.h  HttpRouter.cc  HttpServer.cc  StaticFiles.cc
extensions/http/src/body_reader/: ChunkedReader.cc  ChunkedReader.h  ContentLengthReader.cc  ContentLengthReader.h  UntilCloseReader.cc  UntilCloseReader.h
extensions/http/src/body_writer/: ChunkedWriter.cc  ChunkedWriter.h  ContentLengthWriter.cc  ContentLengthWriter.h  UntilCloseWriter.cc  UntilCloseWriter.h
extensions/http/tests/: form_test.cc  http_parser_test.cc  http_router_test.cc  http_stream_test.cc  http_test.cc  static_files_test.cc
extensions/pg/: CMakeLists.txt
extensions/pg/include/nitrocoro/pg/: PgConnection.h  PgException.h  PgPool.h  PgResult.h  PgTransaction.h  PooledConnection.h
extensions/pg/src/: PgConnection.cc  PgConnectionImpl.cc  PgConnectionImpl.h  PgPool.cc  PgResult.cc  PgResultWrapper.h  PgTransaction.cc  PoolState.cc  PoolState.h  PooledConnection.cc  PooledConnection.h
extensions/pg/tests/: pg_pool_test.cc  pg_press_test.cc  pg_test.cc  pg_transaction_test.cc
extensions/tls/: CMakeLists.txt
extensions/tls/include/nitrocoro/tls/: TlsConnection.h  TlsContext.h  TlsPolicy.h  TlsProvider.h  TlsStream.h
extensions/tls/src/: TlsConnection.cc  TlsStream.cc
extensions/tls/src/providers/: OpenSSLProvider.cc
extensions/tls/tests/: CMakeLists.txt  gen_cert.sh  tls_test.cc
extensions/websocket/src/: WsServer.cc
extensions/websocket/tests/: ws_test.cc
include/: CoroScheduler.h  CoroTraits.h  IoChannel.h  MpscQueue.h  Mutex.h  Scheduler.h  TcpClient.h  TcpConnection.h  TcpServer.h
include/io_adapters/: BufferReader.h  BufferWriter.h
include/nitro_coro/core/: CoroTraits.h  Future.h  Generator.h  MpscQueue.h  Mutex.h  Scheduler.h  Task.h  Types.h
include/nitro_coro/http/: BodyReader.h  BodyWriter.h  HttpClient.h  HttpCompleteMessage.h  HttpContext.h  HttpDataAccessor.h  HttpHeader.h  HttpIncomingStream.h  HttpMessage.h  HttpOutgoingStream.h  HttpParser.h  HttpRequest.h  HttpRequestAccessor.h  HttpResponse.h  HttpResponseAccessor.h  HttpServer.h  HttpStream.h  HttpTypes.h
include/nitro_coro/http/stream/: HttpIncomingStream.h  HttpIncomingStreamBase.h  HttpOutgoingStream.h  HttpOutgoingStreamBase.h
include/nitro_coro/io/: IoChannel.h
include/nitro_coro/io/adapters/: BufferReader.h  BufferWriter.h
include/nitro_coro/net/: Dns.h  DnsException.h  DnsResolver.h  InetAddress.h  TcpConnection.h  TcpServer.h  Url.h
include/nitro_coro/sync/: MpscQueue.h  Mutex.h
include/nitro_coro/utils/: Debug.h  ExtendableBuffer.h  StringBuffer.h
include/nitrocoro/core/: CancelToken.h  CoroTraits.h  Future.h  Generator.h  LockFreeList.h  MpscQueue.h  Mutex.h  Scheduler.h  Task.h  Types.h
include/nitrocoro/http/: BodyReader.h  BodyWriter.h  HttpContext.h  HttpHeader.h  HttpMessage.h  HttpStream.h
include/nitrocoro/http/stream/: HttpIncomingStreamBase.h  HttpOutgoingStream.h  HttpOutgoingStreamBase.h
include/nitrocoro/io/: AnyStream.h  CallbackChannel.h  Channel.h  IoChannel.h  Socket.h
include/nitrocoro/io/adapters/: BufferReader.h  BufferWriter.h
include/nitrocoro/net/: Dns.h  DnsException.h  DnsResolver.h  InetAddress.h  Socket.h  TcpConnection.h  TcpServer.h  Url.h
include/nitrocoro/testing/: Test.h
include/nitrocoro/utils/: Debug.h  ExtendableBuffer.h  Md5.h  Sha1.h  StringBuffer.h  UrlEncode.h
src/: Channel.cc  CoroScheduler.cc  Debug.cc  Dns.cc  DnsResolver.cc  HttpClient.cc  HttpHeader.cc  HttpIncomingStream.cc  HttpOutgoingStream.cc  HttpParser.cc  HttpRequest.cc  HttpResponse.cc  HttpServer.cc  HttpStream.cc  InetAddress.cc  IoChannel.cc  Scheduler.cc  Socket.cc  TcpClient.cc  TcpConnection.cc  TcpServer.cc  Url.cpp
src/http/: BodyReader.cc  BodyWriter.cc  HttpClient.cc  HttpContext.cc  HttpHeader.cc  HttpIncomingStream.cc  HttpOutgoingStream.cc  HttpParser.cc  HttpServer.cc
src/http/body_reader/: ChunkedReader.cc  ChunkedReader.h  ContentLengthReader.cc  ContentLengthReader.h  UntilCloseReader.cc  UntilCloseReader.h
src/http/body_writer/: ChunkedWriter.cc  ChunkedWriter.h  ContentLengthWriter.cc  ContentLengthWriter.h
src/utils/: Base64.cc  Md5.cc  Sha1.cc  UrlEncode.cc
templates/extension/: CMakeLists.txt.template  Extension.cc.template  Extension.h.template  README.md.template  create_extension.sh  test.cc.template
tests/: CMakeLists.txt  addr_test.cc  cancel_test.cc  core_test.cc  coro_test.cc  dns_resolver_test.cc  dns_test.cc  generator_test.cc  http_client.cc  http_server.cc  http_stream_test.cc  self_test.cc  sync_test.cc  tcp_chat_server.cc  tcp_chat_test.cc  tcp_client.cc  tcp_echo_test.cc  tcp_test.cc  url_test.cc
tests/integration/: CMakeLists.txt  https_test.cc
